--- a/install/Brewfile
+++ b/install/Brewfile
@@ -9,22 +9,13 @@ brew "htop"
 brew "tree"
 brew "vim"
 brew "ffmpeg"
-brew "dockutil"
-brew "mackup"
-brew "shellcheck"
 brew "ssh-copy-id"
-brew "stow"
-brew "wget"
 brew "telnet"
 
 # development tools
 brew "git"
 brew "pyenv"
-brew "bat"
 brew "awscli"
-brew "aws-iam-authenticator"
-brew "bats-core"
-brew "kubernetes-cli"
 brew "packer"
 brew "terraform"
 brew "bitwarden-cli"
@@ -32,5 +23,6 @@ brew "go"
 brew "pipenv"
 brew "node"
 brew "helm"
-brew "jq"
+brew "gpg"
+brew "watch"
 brew "kind"
