--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -3,7 +3,7 @@ set-option -g default-terminal "screen-256color"
 set-option -sa terminal-overrides ',xterm-256color:RGB'
 
 # set default shell by OS
-if-shell "uname | grep -q Darwin" "set -g default-shell /usr/local/bin/zsh"
+if-shell "uname | grep -q Darwin" "set -g default-shell /bin/zsh"
 if-shell "uname | grep -q Linux" "set -g default-shell /home/linuxbrew/.linuxbrew/bin/fish"
 
 # very large history
