--- a/install/Brewfile
+++ b/install/Brewfile
@@ -6,8 +6,9 @@ brew "coreutils"
 brew "findutils"
 brew "jq"
 brew "htop"
+brew "btop"
 brew "tree"
-brew "vim"
+brew "neovim"
 brew "vifm"
 brew "ssh-copy-id"
 brew "telnet"
@@ -21,10 +22,12 @@ brew "packer"
 brew "terraform"
 brew "bitwarden-cli"
 brew "go"
-brew "pipenv"
+brew "poetry"
 brew "node"
 brew "helm"
 brew "gpg"
 brew "watch"
 brew "kind"
 brew "podman"
+brew "starship"
+brew "kubectx"
