--- a/install/Brewfile
+++ b/install/Brewfile
@@ -19,7 +19,7 @@ brew "git"
 brew "pyenv"
 brew "awscli"
 brew "packer"
-brew "terraform"
+brew "tfenv"
 brew "bitwarden-cli"
 brew "go"
 brew "poetry"
