--- a/.config/starship.toml
+++ b/.config/starship.toml
@@ -31,7 +31,15 @@ format = "[[](bg:#728da8 fg:#A6A6A6)$user[](bg:#A6A6A6 fg:#728da8)]($style
 
 [cmd_duration]
 min_time = 10_000  # Show command duration over 10,000 milliseconds (= 10 sec)
-format = "took [$duration]($style)"
+format = " took [$duration]($style)"
+
+# [env_var]
+# disabled = true
+# symbol = " "
+# style = "bg:#545B68 fg:#EEEEEE"
+# variable = "0"
+# default = "zsh"
+# format = "([ $symbol$env_value ]($style))"
 
 [battery]
 # disabled = true
@@ -60,13 +68,52 @@ format = "([ (bg:#FF6E79 fg:#A6A6A6)$read_only(bg:#A6A6A6 fg:#FF6E79) ]($read_on
 "/" = "  "
 
 [git_branch]
-format = "[ $symbol$branch ]($style) "
-symbol = " "
+#symbol = " "
+symbol = " " # alternate
 style = "black bg:green"
+truncation_length = 15
+truncation_symbol = "…"
+format = "[ $symbol$branch ]($style)"
+
 
 [git_commit]
+# disabled = true
+style = "bg:#E58F73 fg:#111111"
 commit_hash_length = 8
-style = "bold white"
+# only_detached = true
+format = "[[](bg:#E58F73 fg:#A6A6A6)#$hash[](bg:#A6A6A6 fg:#E58F73)]($style)"
+
+[git_state]
+style = "bg:#E0B25D fg:111111"
+rebase = "rebasing"
+merge = "merging"
+revert = "reverting"
+cherry_pick = " picking"
+bisect = "bisecting"
+am = "am'ing"
+am_or_rebase = "am/rebase"
+format = '\([ $state($progress_current/$progress_total)]($style)\)'
+
+[git_status]
+style = "black bg:#E0B25D"
+stashed = " ${count}"
+ahead = "ﲗ ${count}"
+behind = "ﲔ ${count}"
+diverged = "李 ${ahead_count} ${behind_count}"
+conflicted = "${count}"
+deleted = " ${count}"
+renamed = "﫦${count}"
+modified = " 凜${count}"
+staged = "  ${count}"
+untracked = "  ${count}"
+format = "([ $stashed$staged$modified$renamed$untracked$deleted$conflicted$ahead_behind ]($style))"
+ 
+[ruby]
+# disabled = true
+symbol = " "
+# symbol = " " # alternate
+style = "bg:#CC342D fg:#EEEEEE"
+format = "[ $symbol$version ]($style)"
 
 [gcloud]
 disabled = true
@@ -117,7 +164,6 @@ python_binary = "python3"
 format = '[ (bg:#EBD45B fg:#A6A6A6)$symbol$pyenv_prefix$version (\[$virtualenv\] )(bg:#A6A6A6 fg:#EBD45B)]($style)'
 
 [golang]
-# disabled = true
 symbol = " "
 style = "bg:#7FD5EA fg:#111111"
 format = "[ (bg:#7FD5EA fg:#A6A6A6)$symbol$version (bg:#A6A6A6 fg:#7FD5EA)]($style)"
@@ -140,147 +186,3 @@ format = "[ (bg:#545B68 fg:#A6A6A6)$symbol$version (bg:#A6A6A6 fg:#545B68)]($sty
 symbol = ""
 style = "bg:#A6A6A6 fg:#FF6E79"
 format = "[$symbol$status]($style)"
-
-# # Order of modules on prompt
-# format = """[](bg:#A6A6A6 fg:#57686B)\
-#         $time\
-#         $memory_usage\
-#         $username\
-#         $hostname\
-#         $directory\
-#         $aws\
-#         $gcloud\
-#         $kubernetes\
-#         $docker_context\
-#         $git_branch\
-#         $git_commit\
-#         $git_status\
-#         $git_state\
-#         $golang\
-#         $nodejs\
-#         $python\
-#         $terraform\
-#         $helm\
-#         $package\
-#         $custom\
-#         $line_break\
-#         $battery\
-#         $status\
-#         $character\
-#     """
-
-# [battery]
-# # disabled = true
-# full_symbol = ""
-# charging_symbol = " "
-# discharging_symbol = " "
-# unknown_symbol = ""
-# empty_symbol = ""
-# format = "[[](bg:#DE935F fg:#A6A6A6)$symbol$percentage[](bg:#A6A6A6 fg:#DE935F)]($style)"
-# [[battery.display]]
-# threshold = 20
-# style = "bold bg:#DE935F fg:#EEEEEE"
-# [[battery.display]]
-# threshold = 40
-# style = "bg:#DE935F fg:#111111"
-
-
-# [cmd_duration]
-# # disabled = true
-# style = "bg:#A6A6A6 fg:#111111"
-# min_time = 2_000
-# show_milliseconds = true
-# show_notifications = true
-# min_time_to_notify = 45_000
-# format = "[ 祥$duration]($style)"
-
-# [directory]
-# style = "bg:#545B68 fg:#EEEEEE"
-# read_only = ""
-# read_only_style = "bg:#FF6E79 fg:#EEEEEE"
-# truncation_length = 4
-# truncate_to_repo = true
-# # truncation_symbol = "…"
-# # fish_style_pwd_dir_length = 3
-# format = "([[](bg:#FF6E79 fg:#A6A6A6)$read_only[](bg:#A6A6A6 fg:#FF6E79)]($read_only_style))[[](bg:#545B68 fg:#A6A6A6)$path[](bg:#A6A6A6 fg:#545B68)]($style)"
-
-# [directory.substitutions]
-# # "~/Documents" = ""
-# # "~/Music" = ""
-# # "~/Movies" = ""
-# # "~/Pictures" = ""
-# # "~/Sources" = ""
-# # "~" = " "
-# # "/" = "  "
-
-# [docker_context]
-# # disabled = true
-# symbol = " "
-# style = "bg:#3A91DC  fg:#EEEEEE"
-# only_with_files = true
-# format = "[[](bg:#3A91DC fg:#A6A6A6)$symbol$context[](bg:#A6A6A6 fg:#3A91DC)]($style)"
-
-# [env_var]
-# disabled = true
-# symbol = " "
-# style = "bg:#545B68 fg:#EEEEEE"
-# variable = "0"
-# default = "fish"
-# format = "([[](bg:#545B68 fg:#A6A6A6)$symbol$env_value[](bg:#A6A6A6 fg:#545B68)]($style))"
-
-# [git_branch]
-# # disabled = true
-# symbol = " "
-# # symbol = " " # alternate
-# style = "bg:#96ab5f fg:#111111"
-# # truncation_length = 4
-# # truncation_symbol = ""
-# format = "[[](bg:#96ab5f fg:#A6A6A6)$symbol$branch[](bg:#A6A6A6 fg:#96ab5f)]($style)"
-
-# [git_commit]
-# # disabled = true
-# style = "bg:#E58F73 fg:#111111"
-# commit_hash_length = 4
-# # only_detached = true
-# format = "[[](bg:#E58F73 fg:#A6A6A6)#$hash[](bg:#A6A6A6 fg:#E58F73)]($style)"
-
-# [git_state]
-# # disabled = true
-# style = "bg:#E0B25D fg:111111"
-# rebase = "rebasing"
-# merge = "merging"
-# revert = "reverting"
-# cherry_pick = " picking"
-# bisect = "bisecting"
-# am = "am'ing"
-# am_or_rebase = "am/rebase"
-# format = '\([[](bg:#E0B25D fg:#A6A6A6)$state($progress_current/$progress_total)[](bg:#A6A6A6 fg:#E0B25D)]($style)\)'
-
-# [git_status]
-# # disabled = true
-# style = "bg:#E0B25D fg:#000000"
-# stashed = " ${count}"
-# ahead = "ﲗ ${count}"
-# behind = "ﲔ ${count}"
-# diverged = "李 ${ahead_count} ${behind_count}"
-# conflicted = "${count}"
-# deleted = " ${count}"
-# renamed = "﫦${count}"
-# modified = " 凜${count}"
-# staged = "  ${count}"
-# untracked = "  ${count}"
-# format = "([[](bg:#E0B25D fg:#A6A6A6)$stashed$staged$modified$renamed$untracked$deleted$conflicted$ahead_behind[](bg:#A6A6A6 fg:#E0B25D)]($style))"
-
-# [ruby]
-# # disabled = true
-# symbol = " "
-# # symbol = " " # alternate
-# style = "bg:#CC342D fg:#EEEEEE"
-# format = "[[](bg:#CC342D fg:#A6A6A6)$symbol$version[](bg:#A6A6A6 fg:#CC342D)]($style)"
-
-# [shlvl]
-# # disabled = false
-# symbol = ""
-# style = "bold bg:#A6A6A6 fg:#d7bd8d"
-# threshold = 2
-# format = "[$symbol$shlvl]($style)"
