--- a/.config/starship.toml
+++ b/.config/starship.toml
@@ -107,7 +107,17 @@ untracked = "  ${count}"
 format = "([ $stashed$staged$modified$renamed$untracked$deleted$conflicted$ahead_behind ]($style))"
 
 [aws]
-disabled = true
+disabled = false
+symbol = "  "
+format = '[$symbol($profile )(\($region\) )]($style)'
+
+[gcloud]
+disabled = false
+# symbol = "☁️ "
+symbol = ' '
+# style = "bg:#1A73E8 fg:#EEEEEE"
+# format = '[$symbol($profile )(\($region\) )]($style)'
+format = '[$symbol($account )(\($project\) )]($style)'
 
 [ruby]
 # disabled = true
@@ -115,12 +125,6 @@ symbol = " "
 # symbol = " " # alternate
 style = "bg:#CC342D fg:#EEEEEE"
 format = "[ $symbol$version ]($style)"
-
-[gcloud]
-disabled = true
-symbol = "☁️ "
-style = "bg:#1A73E8 fg:#EEEEEE"
-format = '[$symbol GCLOUD]($style) '
 
 [helm]
 # disabled = true
