--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -1,100 +1,103 @@
-# set the terminals
-set-option -g default-terminal "screen-256color"
-set-option -sa terminal-overrides ',xterm-256color:RGB'
+# Tmux config
 
 # set default shell by OS
 if-shell "uname | grep -q Darwin" "set -g default-shell /bin/zsh"
-if-shell "uname | grep -q Linux" "set -g default-shell /home/linuxbrew/.linuxbrew/bin/fish"
+if-shell "uname | grep -q Linux" "set -g default-shell /usr/bin/zsh"
 
-# very large history
-set -g history-limit 1000000
+# Reload config file with prefix+r
+unbind r
+bind r source-file ~/.config/tmux/tmux.conf
+bind-key r source-file ~/.config/tmux/tmux.conf \; display-message "~/.config/tmux/tmux.conf reloaded"
 
-# base settings
-set -g clock-mode-style 12
-set -g focus-events on
-set -g history-limit 50000
-set -g status-keys vi
-set -gs escape-time 0 # TODO investigate `-s` flag
+set-option -sg escape-time 10
+set-option -g focus-events on
 
-# window settings
-setw -g clock-mode-style 12
-setw -g mode-keys vi
-
-# enable clipboard (OSC 52)
-set -g set-clipboard on
-
-# start windows and pane numbering with index 1 instead of 0
-set -g base-index 1
-setw -g pane-base-index 1
-
-# re-number windows when one is closed
-set -g renumber-windows on
+# Good colors
+# set-option -sa terminal-overrides ',XXX:RGB'
+# 24bit, even better
+# set-option -sa terminal-overrides ",xterm*:Tc"
+set -g default-terminal "screen-256color"
+set-option -ga terminal-overrides ",xterm-256color:Tc"
 
 # remove confirm step when killing a window or pane
 bind-key & kill-window
 bind-key x kill-pane
 
-# begin selection with `v` (vi-like)
-bind-key -T copy-mode-vi 'v' send-keys -X begin-selection
-
-# Window related bindings
-# Open a new pane or window with the current directory of the current pane,
-# not the directory in which the first tmux session was started.
-bind '"' split-window -c "#{pane_current_path}"
-bind % split-window -h -c "#{pane_current_path}"
-bind c new-window -c "#{pane_current_path}"
-
-# Keyboard shortcut bindings
-bind C-b last-window
-bind C-h resize-pane -L 5
-bind C-j resize-pane -D 5
-bind C-k resize-pane -U 5
-bind C-l resize-pane -R 5
-bind C-n next-window
-bind C-p previous-window
-bind g new-window -c "#{pane_current_path}" -n "lazygit" lazygit
-bind K new-window -c "#{pane_current_path}" -n "lazydocker" lazydocker
-bind S new-window -c "#{pane_current_path}" -n "spotify" spt
-bind h select-pane -L
-bind j select-pane -D
-bind k select-pane -U
-bind l select-pane -R
-bind v new-window -c "#{pane_current_path}" nvim +Files
-
-# Set title
-set -g set-titles on
-set -g set-titles-string "#T"
-
-# Mouse bindings
-bind-key -n MouseUp2Status kill-window -t= # Middle click on the window label to kill it
-bind-key -n DoubleClick1Status new-window # Double click on the window list to open a new window
+set -g history-limit 100000
 set -g mouse on
+set -g xterm-keys on
+setw -g aggressive-resize on
+set -g clock-mode-style 12
 
-# copy-mode-vi bindings
-bind-key -T copy-mode-vi 'C-h' select-pane -L
-bind-key -T copy-mode-vi 'C-j' select-pane -D
-bind-key -T copy-mode-vi 'C-k' select-pane -U
-bind-key -T copy-mode-vi 'C-l' select-pane -R
-bind-key -T copy-mode-vi 'C-\' select-pane -l
+# Position pane
+set -g status-position bottom
 
-# Theme
-set -g status-style 'bg=default,fg=white' # transparent status bar
-set -g status-position top 
-set -g pane-active-border-style "fg=green,bg=default"
-set -g pane-border-style "fg=white,bg=default"
-set -g window-status-format "#[fg=brightblack,bg=default](#[fg=white,bg=default]#I #F #W#[fg=brightblack,bg=default])"
-set -g window-status-current-format "#[fg=brightblack,bg=default](#[fg=magenta,bold,bg=default]#I #F #W#[fg=brightblack,nobold,bg=default])"
+# Start windows and panes at 1, not 0
+set -g base-index 1
+set -g pane-base-index 1
+set-window-option -g pane-base-index 1
+set-option -g renumber-windows on
 
-set -g status-left-length 30
-set -g status-left "#[fg=cyan,bold,bg=default] #S " # session name
-if-shell "uname | grep -q Darwin" "set -ga status-left '#[fg=brightblack,bg=default]['"
-if-shell "uname | grep -q Darwin" "set -ga status-left '#(gitmux -cfg $HOME/.config/tmux/gitmux.conf)'"
-if-shell "uname | grep -q Darwin" "set -ga status-left '#[fg=brightblack,bg=default]] '"
+# Act like vim
+set-window-option -g mode-keys vi
+setw -g status-keys vi
 
-set -g status-right-length 100
+# # keybindings
+# bind-key -T copy-mode-vi v send-keys -X begin-selection
+# bind-key -T copy-mode-vi C-v send-keys -X rectangle-toggle
+# bind-key -T copy-mode-vi y send-keys -X copy-selection-and-cancel
+#
+# # Start split at the same location as the previous pane
+# bind '"' split-window -v -c "#{pane_current_path}"
+# bind % split-window -h -c "#{pane_current_path}"
+#
 
-if-shell "uname | grep -q Linux" "set -g status-right '#[fg=cyan,bold,bg=default]%l:%M %a, %b %d '"
-if-shell "uname | grep -q Linux" "set -ga status-right '#[fg=black,bold,bg=cyan]  '"
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'dracula/tmux'
+set -g @plugin 'christoomey/vim-tmux-navigator'
 
-if-shell "uname | grep -q Darwin" "set -g status-right '#[fg=white,bold,bg=default]%l:%M %a, %b %d '"
-if-shell "uname | grep -q Darwin" "set -ga status-right '#[fg=black,bold,bg=white]  '"
+# Dracula
+set -g @dracula-show-powerline true
+
+# available plugins: battery, cpu-usage, git, gpu-usage, ram-usage, network, network-bandwidth, network-ping, attached-clients, network-vpn, weather, time
+# set -g @dracula-plugins "git attached-clients network-ping gpu-usage ram-usage cpu-usage time"
+set -g @dracula-plugins "git ram-usage cpu-usage"
+
+# available colors: white, gray, dark_gray, light_purple, dark_purple, cyan, green, orange, red, pink, yellow
+# set -g @dracula-[plugin-name]-colors "[background] [foreground]"
+set -g @dracula-git-colors "gray yellow"
+set -g @dracula-attached-clients-colors "dark_gray white"
+set -g @dracula-network-ping-colors "gray white"
+set -g @dracula-gpu-usage-colors "dark_gray light_purple"
+set -g @dracula-ram-usage-colors "gray cyan"
+set -g @dracula-cpu-usage-colors "dark_gray green"
+set -g @dracula-time-colors "gray white"
+
+# it can accept `session`, `smiley`, `window`, or any character.
+set -g @dracula-show-left-icon session
+# set -g @dracula-left-icon-padding 1
+
+# Set the minimum number of clients to show (otherwise, show nothing)
+set -g @dracula-clients-minimum 1
+
+# Enable window flags
+set -g @dracula-show-flags true
+
+# the default is 5, it can accept any number
+# set -g @dracula-refresh-rate 2
+
+# Show system load average instead of CPU usage percentage (default)
+# set -g @dracula-cpu-display-load true
+
+# Time settings
+# set -g @dracula-show-timezone false
+# set -g @dracula-military-time false
+# set -g @dracula-show-fahrenheit false
+
+## default git is unicode no message
+#set -g @dracula-git-no-repo-message ""
+#set -g @dracula-git-show-remote-status false
+
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+run '~/.config/tmux/plugins/tpm/tpm'
