--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -58,11 +58,11 @@ set -g @plugin 'dracula/tmux'
 set -g @plugin 'christoomey/vim-tmux-navigator'
 
 # Dracula
-set -g @dracula-show-powerline true
+set -g @dracula-show-powerline false
 
 # available plugins: battery, cpu-usage, git, gpu-usage, ram-usage, network, network-bandwidth, network-ping, attached-clients, network-vpn, weather, time
 # set -g @dracula-plugins "git attached-clients network-ping gpu-usage ram-usage cpu-usage time"
-set -g @dracula-plugins "git ram-usage cpu-usage"
+set -g @dracula-plugins "git"
 
 # available colors: white, gray, dark_gray, light_purple, dark_purple, cyan, green, orange, red, pink, yellow
 # set -g @dracula-[plugin-name]-colors "[background] [foreground]"
@@ -76,28 +76,10 @@ set -g @dracula-time-colors "gray white"
 
 # it can accept `session`, `smiley`, `window`, or any character.
 set -g @dracula-show-left-icon session
-# set -g @dracula-left-icon-padding 1
+set -g @dracula-left-icon-padding 1
 
 # Set the minimum number of clients to show (otherwise, show nothing)
-set -g @dracula-clients-minimum 1
-
-# Enable window flags
-set -g @dracula-show-flags true
-
-# the default is 5, it can accept any number
-# set -g @dracula-refresh-rate 2
-
-# Show system load average instead of CPU usage percentage (default)
-# set -g @dracula-cpu-display-load true
-
-# Time settings
-# set -g @dracula-show-timezone false
-# set -g @dracula-military-time false
-# set -g @dracula-show-fahrenheit false
-
-## default git is unicode no message
-#set -g @dracula-git-no-repo-message ""
-#set -g @dracula-git-show-remote-status false
+# set -g @dracula-clients-minimum 1
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.config/tmux/plugins/tpm/tpm'
