--- a/.config/code/settings.json
+++ b/.config/code/settings.json
@@ -2,5 +2,5 @@
   "workbench.colorTheme": "Default Dark+",
   "git.confirmSync": false,
   "window.zoomLevel": 0.9,
-  "terminal.integrated.fontFamily": "Liga SFMono Nerd Font"
+  "terminal.integrated.fontFamily": "JetBrainsMono Nerd Font"
 }
