--- a/.github/workflows/mac.yaml
+++ b/.github/workflows/mac.yaml
@@ -1,12 +1,9 @@
-name: CI
+name: mac CI
 
 on:
   pull_request:
-    branches:
-      - '*'
-  push:
-    branches:
-      - 'master'
+    paths:
+    - 'mac-setup'
 
 jobs:
   build:
