--- a/.config/alacritty/alacritty-linux.toml
+++ b/.config/alacritty/alacritty-linux.toml
@@ -1,7 +1,7 @@
 live_config_reload = true
 
 import = [
-  "~/.config/alacritty/themes/themes/ashes-dark.toml"
+  "~/.config/alacritty/themes/themes/ashes_dark.toml"
 ]
 
 [cursor]
@@ -9,10 +9,11 @@ style = "Block"
 unfocused_hollow = true
 
 [env]
+LIBGL_ALWAYS_SOFTWARE="1"
 TERM = "xterm-256color"
 
 [font]
-size = 15.0
+size = 11.0
 
 [font.bold]
 family = "JetBrainsMono Nerd Font"
