--- a/.config/alacritty/alacritty-linux.toml
+++ b/.config/alacritty/alacritty-linux.toml
@@ -13,18 +13,18 @@ LIBGL_ALWAYS_SOFTWARE="1"
 TERM = "xterm-256color"
 
 [font]
-size = 11.0
+size = 16.0
 
 [font.bold]
-family = "JetBrainsMono Nerd Font"
+family = "Liga SFMono Nerd Font"
 style = "Bold"
 
 [font.italic]
-family = "JetBrainsMono Nerd Font"
+family = "Liga SFMono Nerd Font"
 style = "Italic"
 
 [font.normal]
-family = "JetBrainsMono Nerd Font"
+family = "Liga SFMono Nerd Font"
 style = "Regular"
 
 [font.offset]
@@ -32,7 +32,7 @@ x = 0
 y = 0
 
 [[hints.enabled]]
-command = "xdg-open" # On Linux/BSD
+command = "open"
 hyperlinks = true
 post_processing = true
 persist = false
@@ -54,48 +54,58 @@ action = "IncreaseFontSize"
 key = "Equals"
 mods = "Command"
 
+# move cursor one word right
 [[keyboard.bindings]]
 chars = "\u001BF"
 key = "Right"
 mods = "Alt"
 
+# move cursor one word left
 [[keyboard.bindings]]
 chars = "\u001BB"
 key = "Left"
 mods = "Alt"
 
+# move cursor to the beginning
 [[keyboard.bindings]]
 chars = "\u001BOH"
 key = "Left"
 mode = "AppCursor"
 mods = "Command"
 
+# move cursor to the end
 [[keyboard.bindings]]
 chars = "\u001BOF"
 key = "Right"
 mode = "AppCursor"
 mods = "Command"
 
+# delete line
 [[keyboard.bindings]]
 chars = "\u0015"
 key = "Back"
 mods = "Command"
 
+# TMUX
+# new tab
 [[keyboard.bindings]]
 chars = "\u0002c"
 key = "T"
 mods = "Command"
 
+# view tmux windows
 [[keyboard.bindings]]
 chars = "\u0002s"
 key = "K"
 mods = "Command"
 
+# close window
 [[keyboard.bindings]]
 chars = "\u0002x"
 key = "W"
 mods = "Command"
 
+# switch windows 1-9
 [[keyboard.bindings]]
 chars = "\u00021"
 key = "Key1"
@@ -141,36 +151,43 @@ chars = "\u00029"
 key = "Key9"
 mods = "Command"
 
+# rename the current tmux window
 [[keyboard.bindings]]
 chars = "\u0002,"
 key = "Comma"
 mods = "Command"
 
+# change to the previous tmux window
 [[keyboard.bindings]]
 chars = "\u0002p"
 key = "LBracket"
 mods = "Command|Shift"
 
+# change to the next tmux window
 [[keyboard.bindings]]
 chars = "\u0002n"
 key = "RBracket"
 mods = "Command|Shift"
 
+# split the current pane into two, left and right
 [[keyboard.bindings]]
 chars = "\u0002%"
 key = "N"
 mods = "Command|Shift"
 
+# split the current pane into two, top and bottom.
 [[keyboard.bindings]]
 chars = "\u0002\""
 key = "N"
 mods = "Command"
 
+# last session
 [[keyboard.bindings]]
 chars = "\u0002L"
 key = "L"
 mods = "Command"
 
+# Run tmux command
 [[keyboard.bindings]]
 chars = "\u0002:"
 key = "Semicolon"
@@ -199,12 +216,6 @@ mods = "Command|Shift"
 [mouse]
 hide_when_typing = true
 
-#[mouse.double_click]
-#threshold = 300
-
-#[mouse.triple_click]
-#threshold = 300
-
 [selection]
 save_to_clipboard = true
 semantic_escape_chars = ",│`|:\"' ()[]{}<>\t"
@@ -216,13 +227,13 @@ dynamic_title = true
 opacity = 0.98
 
 [window.dimensions]
-columns = 168
-lines = 51
+columns = 260
+lines = 55
 
 [window.padding]
 x = 12
 y = 12
 
 [scrolling]
-history = 10000
+history = 100000
 multiplier = 3
