--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -1,26 +1,18 @@
 # set the terminals
-#set-option -g default-terminal "screen-256color"
-#set-option -sa terminal-overrides ',xterm-256color:RGB'
-
-# set default shell by OS
-#if-shell "uname | grep -q Darwin" "set -g default-shell /bin/zsh"
-#if-shell "uname | grep -q Linux" "set -g default-shell /home/linuxbrew/.linuxbrew/bin/fish"
+set-option -g default-terminal "screen-256color"
 
 # very large history
-#set -g history-limit 1000000
+set -g history-limit 1000000
+
+# Reload config file with prefix+r
+bind-key r source-file ~/.config/tmux/tmux.conf \; display-message "~/.config/tmux/tmux.conf reloaded"
 
 # base settings
-set -g clock-mode-style 12
 set -g focus-events on
-set -g history-limit 50000
 set -g status-keys vi
-set -gs escape-time 0 # TODO investigate `-s` flag
 
 # window settings
-setw -g clock-mode-style 12
 setw -g mode-keys vi
-
-# enable clipboard (OSC 52)
 set -g set-clipboard on
 
 # start windows and pane numbering with index 1 instead of 0
@@ -37,64 +29,20 @@ bind-key x kill-pane
 # begin selection with `v` (vi-like)
 bind-key -T copy-mode-vi 'v' send-keys -X begin-selection
 
-# Window related bindings
-# Open a new pane or window with the current directory of the current pane,
-# not the directory in which the first tmux session was started.
-bind '"' split-window -c "#{pane_current_path}"
-bind % split-window -h -c "#{pane_current_path}"
-bind c new-window -c "#{pane_current_path}"
-
-# Keyboard shortcut bindings
-bind C-b last-window
-bind C-h resize-pane -L 5
-bind C-j resize-pane -D 5
-bind C-k resize-pane -U 5
-bind C-l resize-pane -R 5
-bind C-n next-window
-bind C-p previous-window
-bind g new-window -c "#{pane_current_path}" -n "lazygit" lazygit
-bind K new-window -c "#{pane_current_path}" -n "lazydocker" lazydocker
-bind S new-window -c "#{pane_current_path}" -n "spotify" spt
-bind h select-pane -L
-bind j select-pane -D
-bind k select-pane -U
-bind l select-pane -R
-bind v new-window -c "#{pane_current_path}" nvim +Files
-
-# Set title
-set -g set-titles on
-set -g set-titles-string "#T"
-
 # Mouse bindings
-bind-key -n MouseUp2Status kill-window -t= # Middle click on the window label to kill it
-bind-key -n DoubleClick1Status new-window # Double click on the window list to open a new window
 set -g mouse on
 
-# copy-mode-vi bindings
-bind-key -T copy-mode-vi 'C-h' select-pane -L
-bind-key -T copy-mode-vi 'C-j' select-pane -D
-bind-key -T copy-mode-vi 'C-k' select-pane -U
-bind-key -T copy-mode-vi 'C-l' select-pane -R
-bind-key -T copy-mode-vi 'C-\' select-pane -l
-
 # Theme
-set -g status-style 'bg=default,fg=white' # transparent status bar
 set -g status-position top
-set -g pane-active-border-style "fg=green,bg=default"
+set -g status-style "bg=default,fg=white"
+set -g pane-active-border-style "fg=lightyellow,bg=default"
 set -g pane-border-style "fg=white,bg=default"
-set -g window-status-format "#[fg=brightblack,bg=default](#[fg=white,bg=default]#I #F #W#[fg=brightblack,bg=default])"
-set -g window-status-current-format "#[fg=brightblack,bg=default](#[fg=magenta,bold,bg=default]#I #F #W#[fg=brightblack,nobold,bg=default])"
 
 set -g status-left-length 30
-set -g status-left "#[fg=cyan,bold,bg=default] #S " # session name
-if-shell "uname | grep -q Darwin" "set -ga status-left '#[fg=brightblack,bg=default]['"
-if-shell "uname | grep -q Darwin" "set -ga status-left '#(gitmux -cfg $HOME/.config/tmux/gitmux.conf)'"
-if-shell "uname | grep -q Darwin" "set -ga status-left '#[fg=brightblack,bg=default]] '"
+set -g status-left "#[fg=#95aec7,bold,bg=default][#S] " # session name
 
-set -g status-right-length 100
+set -g window-status-format "#[fg=brightblack,bg=default][#[fg=white,bg=default]#I #F #W#[fg=brightblack,bg=default]]"
+set -g window-status-current-format "#[fg=brightblack,bg=default][#[fg=#c795ae,bold,bg=default]#I #F #W#[fg=brightblack,nobold,bg=default]]"
 
-if-shell "uname | grep -q Linux" "set -g status-right '#[fg=cyan,bold,bg=default]%l:%M %a, %b %d '"
-if-shell "uname | grep -q Linux" "set -ga status-right '#[fg=black,bold,bg=cyan]  '"
-
-if-shell "uname | grep -q Darwin" "set -g status-right '#[fg=white,bold,bg=default]%l:%M %a, %b %d '"
-if-shell "uname | grep -q Darwin" "set -ga status-right '#[fg=black,bold,bg=white]  '"
+set -g status-right-length 1
+set -g status-right " "
