--- a/.config/alacritty/alacritty.toml
+++ b/.config/alacritty/alacritty.toml
@@ -1,7 +1,7 @@
 live_config_reload = true
 
 import = [
-  "~/.config/alacritty/themes/themes/ashes_dark.toml"
+  "~/.config/alacritty/themes/themes/rose-pine.toml"
 ]
 
 shell = "/opt/homebrew/bin/tmux"
@@ -39,11 +39,6 @@ post_processing = true
 persist = false
 mouse.enabled = true
 regex = "(ipfs:|ipns:|magnet:|mailto:|gemini://|gopher://|https://|http://|news:|file:|git://|ssh:|ftp://)[^\u0000-\u001F\u007F-\u009F<>\"\\s{-}\\^⟨⟩`]+"
-
-[[keyboard.bindings]]
-action = "Quit"
-key = "Q"
-mods = "Command"
 
 [[keyboard.bindings]]
 action = "DecreaseFontSize"
@@ -87,133 +82,6 @@ chars = "\u0015"
 key = "Back"
 mods = "Command"
 
-# TMUX
-# new tab
-[[keyboard.bindings]]
-chars = "\u0002c"
-key = "T"
-mods = "Command"
-
-# view tmux windows
-[[keyboard.bindings]]
-chars = "\u0002s"
-key = "K"
-mods = "Command"
-
-# close window
-[[keyboard.bindings]]
-chars = "\u0002x"
-key = "W"
-mods = "Command"
-
-# switch windows 1-9
-[[keyboard.bindings]]
-chars = "\u00021"
-key = "Key1"
-mods = "Command"
-
-[[keyboard.bindings]]
-chars = "\u00022"
-key = "Key2"
-mods = "Command"
-
-[[keyboard.bindings]]
-chars = "\u00023"
-key = "Key3"
-mods = "Command"
-
-[[keyboard.bindings]]
-chars = "\u00024"
-key = "Key4"
-mods = "Command"
-
-[[keyboard.bindings]]
-chars = "\u00025"
-key = "Key5"
-mods = "Command"
-
-[[keyboard.bindings]]
-chars = "\u00026"
-key = "Key6"
-mods = "Command"
-
-[[keyboard.bindings]]
-chars = "\u00027"
-key = "Key7"
-mods = "Command"
-
-[[keyboard.bindings]]
-chars = "\u00028"
-key = "Key8"
-mods = "Command"
-
-[[keyboard.bindings]]
-chars = "\u00029"
-key = "Key9"
-mods = "Command"
-
-# rename the current tmux window
-[[keyboard.bindings]]
-chars = "\u0002,"
-key = "Comma"
-mods = "Command"
-
-# change to the previous tmux window
-[[keyboard.bindings]]
-chars = "\u0002p"
-key = "LBracket"
-mods = "Command|Shift"
-
-# change to the next tmux window
-[[keyboard.bindings]]
-chars = "\u0002n"
-key = "RBracket"
-mods = "Command|Shift"
-
-# split the current pane into two, left and right
-[[keyboard.bindings]]
-chars = "\u0002%"
-key = "N"
-mods = "Command|Shift"
-
-# split the current pane into two, top and bottom.
-[[keyboard.bindings]]
-chars = "\u0002\""
-key = "N"
-mods = "Command"
-
-# last session
-[[keyboard.bindings]]
-chars = "\u0002L"
-key = "L"
-mods = "Command"
-
-# Run tmux command
-[[keyboard.bindings]]
-chars = "\u0002:"
-key = "Semicolon"
-mods = "Command"
-
-[[keyboard.bindings]]
-chars = "\u0002\u001B[D"
-key = "Left"
-mods = "Command|Shift"
-
-[[keyboard.bindings]]
-chars = "\u0002\u001B[C"
-key = "Right"
-mods = "Command|Shift"
-
-[[keyboard.bindings]]
-chars = "\u0002\u001B[A"
-key = "Up"
-mods = "Command|Shift"
-
-[[keyboard.bindings]]
-chars = "\u0002\u001B[B"
-key = "Down"
-mods = "Command|Shift"
-
 [mouse]
 hide_when_typing = true
 
@@ -226,6 +94,7 @@ decorations = "none"
 dynamic_padding = false
 dynamic_title = true
 opacity = 0.98
+blur = true
 
 [window.dimensions]
 columns = 260
